1. Arrange Html to search

--- a/templates/.babelrc
+++ b/templates/.babelrc
@@ -1,11 +1,21 @@
 {
   "presets": [
-    ["es2015", { "modules": false }]
+    [
+      "es2015",
+      {
+        "modules": false
+      }
+    ]
   ],
-  "plugins": [["component", [
-    {
-      "libraryName": "element-ui",
-      "styleLibraryName": "theme-default"
-    }
-  ]]]
+  "plugins": [
+    [
+      "component",
+      [
+        {
+          "libraryName": "element-ui",
+          "styleLibraryName": "theme-default"
+        }
+      ]
+    ]
+  ]
 }
