--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ argh==0.26.2
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
+codecov==2.0.9
+coverage==4.4.1
 elasticsearch==5.4.0
 Flask==0.12.2
-Flask-Cors==3.0.3
 Flask-PyMongo==0.5.1
 Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.2
@@ -17,7 +18,6 @@ httptools==0.0.9
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
-konlpy==0.4.4
 MarkupSafe==1.0
 numpy==1.13.1
 pathtools==0.1.2
