--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install codecov
 
 script:
-  - coverage run tests/tests.py
+  - coverage run test/tests.py
 
 after_success:
   - codecov
