--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argh==0.26.2
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
+codacy-coverage==1.3.6
 codecov==2.0.9
 coverage==4.4.1
 elasticsearch==5.4.0
