--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ python:
 install:
   - pip install codecov
 
-script:
-  - coverage run test/tests.py
+#script:
+#  - coverage run test/tests.py
 
 after_success:
   - codecov
