--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ codacy-coverage==1.3.6
 codecov==2.0.9
 coverage==4.4.1
 elasticsearch==5.4.0
+elasticsearch-dsl==5.3.0
 Flask==0.12.2
+Flask-Cors==3.0.3
 Flask-PyMongo==0.5.1
 Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.2
@@ -19,6 +21,7 @@ httptools==0.0.9
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
+konlpy==0.4.4
 MarkupSafe==1.0
 numpy==1.13.1
 pathtools==0.1.2
